# nixie-clock-esp32c3

./: .clang-format  .gitignore  CERN_OHL_LICENSE  CMakeLists.txt  LICENSE  README.md  sdkconfig
case/: INS1.STEP  KCD11.step  M3_Short.step  M3_Standard.step  SocketPin.stl  Speaker.STEP  case.py  converter.step  enclosure.stl  front_panel.dxf  front_panel.stl  rear_panel.stl
clock/: clock.kicad_pro  clock.kicad_sch  drivers_1.kicad_sch  drivers_2.kicad_sch  esp32-c3.kicad_sch  nixie_tubes.kicad_sch  power.kicad_sch  shift_registers.kicad_sch  sound_motion.kicad_sch  sym-lib-table
clock/fabrication/: clock-B_Cu.gbr  clock-B_Mask.gbr  clock-B_Paste.gbr  clock-B_Silkscreen.gbr  clock-Edge_Cuts.gbr  clock-F_Cu.gbr  clock-F_Mask.gbr  clock-F_Paste.gbr  clock-F_Silkscreen.gbr  clock-NPTH.drl  clock-PTH.drl  clock-job.gbrjob
clock/libraries/1287/: 1287.kicad_sym  1287.step  KEYSTONE_1287.kicad_mod
clock/libraries/C4532X7R2E474K230KA/: C4532X7R2E474K230KA.dcm  C4532X7R2E474K230KA.kicad_sym  C4532X7R2E474K230KA.lib  C4532X7R2E474K230KA.mod  C4532_Commercial.kicad_mod
clock/libraries/SPADE-TAB/: KEYSTONE_spade_tab.kicad_mod  spade_tab.kicad_sym  spade_tab.step
main/: CMakeLists.txt  Kconfig.projbuild  audio.c  audio.h  body.html  clock.c  clock.h  config.c  config.h  config.html  idf_component.yml  led_strip_encoder.h  leds.c  leds.h  main.c  motion.c  motion.h  settings.js  sntp.c  sntp.h  styles.css  vfs.c  vfs.h  wifi_prov.c  wifi_prov.h  ws_server.c  ws_server.h
